473: Alex 2015-03-23 NEW look, new Feature: respondent Timezone and Local time displayappointments.php
472: Alex 2015-03-23 updated questionnairelist.php  and   new.php
471: Alex 2015-03-23 pages new look
470: Alex 2015-03-23 new "Operators" menu pages
469: Alex 2015-03-23 new  look  for pages
468: Alex 2015-03-23 new "client" pages


Database updates required:

/* New outcomes */

INSERT INTO `outcome` (`outcome_id`, `aapor_id`, `description`, `default_delay_minutes`, `outcome_type_id`, `tryanother`, `contacted`, `tryagain`, `eligible`, `require_note`, `calc`) VALUES(42, '3.13', 'Max call attempts reached', 0, 1, 0, 1, 0, 1, 0, 'UH');
INSERT INTO `outcome` (`outcome_id`, `aapor_id`, `description`, `default_delay_minutes`, `outcome_type_id`, `tryanother`, `contacted`, `tryagain`, `eligible`, `require_note`, `calc`) VALUES(43, '3.13', 'Max calls reached', 0, 1, 0, 1, 0, 1, 0, 'UH');


/* Add var_id sample var identifier */
ALTER TABLE  `sample_import_var_restrict` DROP PRIMARY KEY, CHANGE var var CHAR(128);
ALTER TABLE `sample_import_var_restrict` ADD  `var_id` BIGINT( 20 ) UNSIGNED PRIMARY KEY NOT NULL AUTO_INCREMENT AFTER  `sample_import_id`;
ALTER TABLE  `sample_import_var_restrict` ADD  `type` SMALLINT( 10 ) UNSIGNED NOT NULL AFTER  `var`;

ALTER TABLE  `sample_var` ADD  `var_id` BIGINT( 20 ) UNSIGNED NOT NULL AFTER  `sample_id`;

UPDATE `sample_var` as sv ,`sample`as s, `sample_import_var_restrict` as sivr  SET sv.`var_id`=sivr.`var_id`  WHERE sv.`var` LIKE sivr.`var`  AND sv.`sample_id`=s.`sample_id` AND   s.`import_id`=sivr.`sample_import_id`;

UPDATE  `sample_import_var_restrict` ,
`sample_var` SET  `sample_import_var_restrict`.`type` =  `sample_var`.`type` WHERE  `sample_import_var_restrict`.`var_id` =  `sample_var`.`var_id`;

ALTER TABLE  `qsqr_sample` ADD  `exclude_var_id` BIGINT( 20 ) NOT NULL AFTER  `questionnaire_sample_quota_row_id`;
